[tool.poetry]
name = "pricehist"
version = "1.4.0"
description = "Fetch and format historical price data"
authors = ["Chris Berkhout <chris@chrisberkhout.com>"]
license = "MIT"
keywords = ["historical", "prices", "plaintext", "accounting", "csv", "gnucash", "ledger", "hledger", "beancount"]
readme = "README.md"
homepage = "https://gitlab.com/chrisberkhout/pricehist"
repository = "https://gitlab.com/chrisberkhout/pricehist"
include = [
    "LICENSE",
    "example-gnuplot.png",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
lxml = "^4.6.2"
cssselect = "^1.1.0"
curlify = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
flake8 = "^3.9.1"
isort = "^5.8.0"
responses = "^0.13.3"
coverage = "^5.5"
pytest-mock = "^3.6.1"
tox = "^3.24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pricehist = "pricehist.cli:cli"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
markers = []
